fixed stuck button after press

--- a/src/components/GenericButton/genericButton.scss
+++ b/src/components/GenericButton/genericButton.scss
@@ -11,8 +11,7 @@ input.btn-block {
 
 
   &:hover,
-  &:active,
-  &:focus {
+  &:active {
     border: none;
     background: rgb(61, 177, 255);
   }
